--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,33 @@
 ::-webkit-scrollbar{
   display: none;
 }
+
+.stroke-text
+{
+  
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-fill-color:transparent;
+  -webkit-text-stroke: 1px;
+}
+
+.btn{
+  background-color:white;
+  padding:o.5rem;
+  font-size: 15px;
+  font-weight: bold;
+  border:4px solid transparent;
+  transition: 300ms all;
+  display: flex;
+  align-items: center;
+justify-content:center;
+}
+.btn:hover{
+  cursor:pointer;
+}
+.blur{
+  background:rgb(253, 120, 43,0.69);
+  position: absolute;
+  border-radius:50%;
+  filter: blur(155px);
+  z-index: -9;
+}
